--- a/app/src/main/res/layout/ny_news_item.xml
+++ b/app/src/main/res/layout/ny_news_item.xml
@@ -22,7 +22,8 @@
         android:layout_alignTop="@id/news_iv"
         android:layout_marginLeft="8dp"
         android:layout_toRightOf="@id/news_iv"
-        android:text="fjlskjakfjlafjklajk"
+        android:text="你好"
+
         android:textColor="@color/text_black"
         android:textSize="18sp"
         />
