--- a/app/src/main/res/layout/ny_pic_show_item.xml
+++ b/app/src/main/res/layout/ny_pic_show_item.xml
@@ -5,6 +5,15 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:id="@+id/view_share_iv"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        />
+    <ImageView
         android:id="@+id/photo_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
