--- a/app/src/main/res/layout/ny_pic_show_item.xml
+++ b/app/src/main/res/layout/ny_pic_show_item.xml
@@ -4,15 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/view_share_iv"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        />
+
     <ImageView
         android:id="@+id/photo_view"
         android:layout_width="match_parent"
@@ -20,6 +12,16 @@
         android:scaleType="centerCrop"
         />
 
+    <ImageView
+        android:id="@+id/view_share_iv"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/videoshow_share_light"
+        />
     <RelativeLayout
         android:id="@+id/bottom_show_bar_rl"
         android:layout_width="match_parent"
