--- a/app/src/main/res/layout/ny_share_dialog.xml
+++ b/app/src/main/res/layout/ny_share_dialog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background="@color/transparent_half"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,8 +13,8 @@
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:background="@color/white"
         android:clickable="true"
+        android:numColumns="3"
         android:layout_alignParentBottom="true"
         />
 </RelativeLayout>
