--- a/app/src/main/res/layout/ny_home_title.xml
+++ b/app/src/main/res/layout/ny_home_title.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center_vertical"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/ny_logo"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:scaleType="centerInside"
+        android:scaleType="centerInside" />
+
+    <TextView
+        android:id="@+id/ny_title_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:textSize="18sp"
+        android:gravity="center_vertical"
         />
 </LinearLayout>
