--- a/app/src/main/res/layout/super_user_edit_dialog.xml
+++ b/app/src/main/res/layout/super_user_edit_dialog.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+   xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:background="@color/white"
     android:padding="10dp"
     >
 
     <com.sflib.CustomView.baseview.EditTextClearDroidView
         android:id="@+id/edit_view"
         android:background="@drawable/baby_medical_input_et"
+        android:gravity="top|left"
         android:layout_width="match_parent"
         android:layout_height="300dp" />
 
