--- a/app/src/main/res/layout/item_news_detail.xml
+++ b/app/src/main/res/layout/item_news_detail.xml
@@ -2,19 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
+    >
 
     <ImageView
+        android:layout_marginTop="8dp"
         android:id="@+id/news_detail_iv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:elevation="8dp"
+        />
 
     <TextView
         android:id="@+id/news_detail_desc_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/text_black"
-        android:text="18sp"
-        android:gravity="center"
+        android:textSize="16sp"
+        android:layout_marginTop="4dp"
+        android:gravity="left|top"
         />
 </LinearLayout>
