--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/transparent_half"
-    >
+    android:background="@color/transparent_half">
 
     <RelativeLayout
         android:id="@+id/comment_rl"
@@ -25,16 +24,24 @@
             android:textColor="@color/white"
             android:textSize="16sp" />
 
-        <EditText
-            android:id="@+id/comment_et"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_toLeftOf="@id/comment_send_tv"
-            android:background="@drawable/baby_medical_input_et"
-            android:gravity="center_vertical"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:textColor="@color/text_black"
-            android:textSize="14sp" />
+            android:background="@drawable/baby_medical_input_et">
+
+            <com.sflib.CustomView.baseview.EditTextClearDroidView
+                android:id="@+id/comment_et"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:hint="写下你的想法"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:textColor="@color/text_black"
+                android:textColorHint="@color/lb_grey"
+                android:textCursorDrawable="@null"
+                android:textSize="14sp" />
+        </FrameLayout>
     </RelativeLayout>
 </RelativeLayout>
