--- a/app/src/main/res/layout/ny_big_pic_item.xml
+++ b/app/src/main/res/layout/ny_big_pic_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -10,40 +11,98 @@
     android:paddingRight="8dp"
     android:paddingTop="16dp">
 
+    <!--<android.support.v7.widget.CardView-->
+        <!--android:id="@+id/big_pic_cd"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:cardElevation="6dp"-->
+        <!--android:clickable="true"-->
+        <!--android:foreground="?android:attr/selectableItemBackground"-->
+        <!--&gt;-->
+        <!--app:riv_corner_radius="6dp"-->
+    <FrameLayout
+        android:id="@+id/big_pic_cd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/card_shadow"
+        >
     <com.basesmartframe.bitmap.rounddrawable.RoundedImageView
         android:id="@+id/big_pic_iv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
-        app:riv_corner_radius="6dp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        />
+    </FrameLayout>
+    <!--</android.support.v7.widget.CardView>-->
+    <RelativeLayout
+        android:id="@+id/comment_rl"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginTop="8dp"
+        android:layout_below="@id/big_pic_cd"
+        android:gravity="center_vertical">
 
         <ImageView
-            android:id="@+id/write_comment_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher" />
+            android:id="@+id/comment_iv"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/comment" />
 
         <TextView
             android:id="@+id/comment_tv"
+            android:layout_toRightOf="@id/comment_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="comment number"
-            />
+            android:layout_marginLeft="4dp"
+            android:layout_centerVertical="true"
+            android:text="10"
+            android:textSize="14sp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/write_comment_rl"
+        android:layout_alignTop="@id/comment_rl"
+        android:layout_toRightOf="@id/comment_rl"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp">
+
+        <ImageView
+            android:id="@+id/write_comment_iv"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/input_comment" />
+
         <TextView
-            android:id="@+id/pic_label_tv"
+            android:id="@+id/write_comment_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:textColor="@color/lb_grey"
-            android:textSize="12sp" />
-    </LinearLayout>
+            android:layout_toRightOf="@id/write_comment_iv"
+            android:layout_marginLeft="4dp"
+            android:layout_centerVertical="true"
+            android:text="评论"
+            android:textSize="14sp" />
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/pic_label_tv"
+        android:layout_alignTop="@id/write_comment_rl"
+        android:layout_toRightOf="@id/write_comment_rl"
+        android:layout_alignBottom="@id/write_comment_rl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:textColor="@color/lb_grey"
+        android:layout_marginLeft="16dp"
+        tools:text="街拍"
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/pic_desc_tv"
+        android:layout_below="@id/comment_rl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -51,4 +110,4 @@
         android:textColor="@color/text_black"
         android:textSize="16sp" />
 
-</LinearLayout>
+</RelativeLayout>
