--- a/app/src/main/res/layout/super_user_operate_dialog.xml
+++ b/app/src/main/res/layout/super_user_operate_dialog.xml
@@ -21,6 +21,7 @@
         android:text="@string/remove"
         android:textSize="16sp"
         android:gravity="center"
+        android:textColor="@color/text_black"
         android:background="@drawable/ny_item_selector"
         />
     <View
@@ -35,6 +36,7 @@
         android:text="@string/edit"
         android:textSize="16sp"
         android:gravity="center"
+        android:textColor="@color/text_black"
         android:background="@drawable/ny_item_selector"
         />
     </LinearLayout>
