--- a/app/src/main/res/layout/ny_beauty_show_item.xml
+++ b/app/src/main/res/layout/ny_beauty_show_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -11,6 +12,7 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         />
+
 
     <ImageView
         android:id="@+id/view_share_iv"
@@ -40,6 +42,7 @@
             android:textColor="@color/white"
             android:textSize="16dp"
             android:maxLines="3"
+
             />
     </RelativeLayout>
 
@@ -50,4 +53,14 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         />
+
+    <include
+        android:id="@+id/no_data_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        layout="@layout/nodata_view"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        />
+
 </RelativeLayout>
