--- a/app/src/main/res/layout/ny_big_pic_item.xml
+++ b/app/src/main/res/layout/ny_big_pic_item.xml
@@ -11,28 +11,16 @@
     android:paddingRight="8dp"
     android:paddingTop="16dp">
 
-    <!--<android.support.v7.widget.CardView-->
-        <!--android:id="@+id/big_pic_cd"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--app:cardElevation="6dp"-->
-        <!--android:clickable="true"-->
-        <!--android:foreground="?android:attr/selectableItemBackground"-->
-        <!--&gt;-->
-        <!--app:riv_corner_radius="6dp"-->
     <FrameLayout
         android:id="@+id/big_pic_cd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/card_shadow"
         >
     <com.basesmartframe.bitmap.rounddrawable.RoundedImageView
         android:id="@+id/big_pic_iv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
-
-        />
+        android:scaleType="centerCrop" />
     </FrameLayout>
     <!--</android.support.v7.widget.CardView>-->
     <RelativeLayout
