--- a/app/src/main/res/layout/ny_big_pic_item.xml
+++ b/app/src/main/res/layout/ny_big_pic_item.xml
@@ -4,98 +4,103 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/home_big_pic_card_bg"
     android:orientation="vertical"
-    android:paddingBottom="16dp"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp"
-    android:paddingTop="16dp">
+    android:paddingBottom="20dp"
+    android:paddingLeft="7dp"
+    android:paddingRight="7dp">
 
-    <FrameLayout
-        android:id="@+id/big_pic_cd"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+
     <com.basesmartframe.bitmap.rounddrawable.RoundedImageView
         android:id="@+id/big_pic_iv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="centerCrop" />
-    </FrameLayout>
-    <!--</android.support.v7.widget.CardView>-->
-    <RelativeLayout
-        android:id="@+id/comment_rl"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginTop="8dp"
-        android:layout_below="@id/big_pic_cd"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:id="@+id/comment_iv"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/comment" />
-
-        <TextView
-            android:id="@+id/comment_tv"
-            android:layout_toRightOf="@id/comment_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:layout_centerVertical="true"
-            android:text="10"
-            android:textSize="14sp" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/write_comment_rl"
-        android:layout_alignTop="@id/comment_rl"
-        android:layout_toRightOf="@id/comment_rl"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp">
-
-        <ImageView
-            android:id="@+id/write_comment_iv"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/input_comment" />
-
-        <TextView
-            android:id="@+id/write_comment_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/write_comment_iv"
-            android:layout_marginLeft="4dp"
-            android:layout_centerVertical="true"
-            android:text="评论"
-            android:textSize="14sp" />
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/pic_label_tv"
-        android:layout_alignTop="@id/write_comment_rl"
-        android:layout_toRightOf="@id/write_comment_rl"
-        android:layout_alignBottom="@id/write_comment_rl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:textColor="@color/lb_grey"
-        android:layout_marginLeft="16dp"
-        tools:text="街拍"
-        android:textSize="12sp" />
+        android:scaleType="centerCrop"
+        app:riv_corner_radius_top_left="10dp"
+        app:riv_corner_radius_top_right="10dp" />
 
     <TextView
         android:id="@+id/pic_desc_tv"
-        android:layout_below="@id/comment_rl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_below="@id/big_pic_iv"
+        android:layout_marginTop="8dp"
         android:maxLines="2"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:textColor="@color/text_black"
         android:textSize="16sp" />
+
+
+        <RelativeLayout
+            android:id="@+id/comment_rl"
+            android:layout_below="@id/pic_desc_tv"
+            android:layout_alignLeft="@id/pic_desc_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center_vertical"
+            android:paddingRight="8dp">
+
+            <ImageView
+                android:id="@+id/comment_iv"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_centerVertical="true"
+                android:src="@drawable/comment" />
+
+            <TextView
+                android:id="@+id/comment_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="4dp"
+                android:layout_toEndOf="@id/comment_iv"
+                android:text="10"
+                android:textColor="@color/text_black"
+                android:textSize="14sp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/write_comment_rl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/comment_rl"
+            android:layout_centerHorizontal="true"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp">
+
+            <ImageView
+                android:id="@+id/write_comment_iv"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:src="@drawable/input_comment" />
+
+            <TextView
+                android:id="@+id/write_comment_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="4dp"
+                android:layout_toRightOf="@id/write_comment_iv"
+                android:text="评论"
+                android:textColor="@color/text_black"
+                android:textSize="14sp" />
+        </RelativeLayout>
+
+    <TextView
+        android:id="@+id/pic_time_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/comment_rl"
+        android:layout_alignBottom="@id/comment_rl"
+        android:layout_alignRight="@id/pic_desc_tv"
+        android:gravity="center_vertical"
+        android:textColor="@color/lb_grey"
+        android:textSize="14sp"
+        tools:text="2018-10-10" />
+
 
 </RelativeLayout>
