耽美模块添加评论

--- a/app/src/main/res/layout/ny_beauty_show_activity.xml
+++ b/app/src/main/res/layout/ny_beauty_show_activity.xml
@@ -41,12 +41,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/music_icon"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:visibility="gone"
         tools:visibility="visible"
         />
-
+    <include
+        android:id="@+id/comment_view"
+        layout="@layout/comment_item"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone"
+        tools:visibility="visible"
+        />
 </RelativeLayout>
