--- a/app/src/main/res/layout/ny_big_pic_item.xml
+++ b/app/src/main/res/layout/ny_big_pic_item.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:background="@drawable/home_big_pic_card_bg"
     android:orientation="vertical"
-    android:paddingBottom="20dp"
     android:paddingLeft="7dp"
     android:paddingRight="7dp">
 
@@ -38,7 +37,8 @@
             android:layout_alignLeft="@id/pic_desc_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
             android:gravity="center_vertical"
             android:paddingRight="8dp">
 
@@ -67,8 +67,8 @@
             android:layout_height="wrap_content"
             android:layout_alignTop="@id/comment_rl"
             android:layout_centerHorizontal="true"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp">
+            android:padding="8dp"
+            >
 
             <ImageView
                 android:id="@+id/write_comment_iv"
