--- a/app/src/main/res/layout/ny_pic_show_item.xml
+++ b/app/src/main/res/layout/ny_pic_show_item.xml
@@ -34,7 +34,7 @@
         android:background="@color/transparent_half"
         >
         <TextView
-            android:id="@+id/bottom_bar_tv"
+            android:id="@+id/pic_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
