--- a/app/src/main/res/layout/ny_pic_show_activity.xml
+++ b/app/src/main/res/layout/ny_pic_show_activity.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
 
     <android.support.v4.view.ViewPager
@@ -10,5 +11,13 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         />
-
+    <include
+        android:id="@+id/comment_view"
+        layout="@layout/comment_item"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone"
+        tools:visibility="visible"
+        />
 </RelativeLayout>
