--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,4 +2,6 @@
 <resources>
     <item name="right_bt" type="id"/>
     <item name="left_bt" type="id"/>
+    <item name="statusbarutil_fake_status_bar_view" type="id" />
+    <item name="statusbarutil_translucent_view" type="id" />
 </resources>
