--- a/app/src/main/res/layout/ny_beauty_show_item.xml
+++ b/app/src/main/res/layout/ny_beauty_show_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<xnt.com.fun.view.FixRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -44,4 +44,4 @@
         android:id="@+id/beauty_dialog_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-</RelativeLayout>
+</xnt.com.fun.view.FixRelativeLayout>
