--- a/app/src/main/res/layout/ny_login_activity.xml
+++ b/app/src/main/res/layout/ny_login_activity.xml
@@ -22,7 +22,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/baby_medical_input_et"
+        android:background="@drawable/ny_login_bg"
         android:inputType="phone"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
@@ -39,7 +39,7 @@
         android:layout_alignRight="@id/login_atv"
         android:layout_below="@id/login_atv"
         android:layout_marginTop="24dp"
-        android:background="@drawable/baby_medical_input_et"
+        android:background="@drawable/ny_login_bg"
         android:inputType="textPassword"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
@@ -56,9 +56,10 @@
         android:layout_alignRight="@id/login_atv"
         android:layout_below="@id/pwd_cdv"
         android:layout_marginTop="36dp"
-        android:background="@drawable/baby_medical_login_bt"
+        android:background="@drawable/ny_login_bt_selector"
         android:enabled="false"
         android:text="@string/login_tip"
+        android:gravity="center"
         android:textColor="@color/white"
         android:textSize="15sp"
 
