--- a/app/src/main/res/layout/comment_dialog.xml
+++ b/app/src/main/res/layout/comment_dialog.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/transparent_half"
     >
 
     <xnt.com.fun.view.FixRelativeLayout
@@ -64,7 +65,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:visibility="gone"
-        tools:visibility="visible"
         />
 </RelativeLayout>
