--- a/app/src/main/res/layout/ny_pic_show_item.xml
+++ b/app/src/main/res/layout/ny_pic_show_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<xnt.com.fun.view.FixRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -99,4 +99,4 @@
         </LinearLayout>
     </RelativeLayout>
 
-</RelativeLayout>
+</xnt.com.fun.view.FixRelativeLayout>
