--- a/app/src/main/res/layout/ny_fragment_profile.xml
+++ b/app/src/main/res/layout/ny_fragment_profile.xml
@@ -39,4 +39,76 @@
             android:textColor="@color/text_black"
             />
     </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/clear_cache_rl"
+        android:layout_below="@id/personal_rl"
+        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:background="@color/white"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="清理缓存"
+            android:layout_marginLeft="8dp"
+            />
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/version_rl"
+        android:layout_below="@id/clear_cache_rl"
+        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:background="@color/white"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="版本信息"
+            android:textColor="@color/lb_grey"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="8dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="1.0.0"
+            android:textColor="@color/lb_grey"
+            android:gravity="center_vertical"
+            android:layout_marginRight="8dp"
+            android:layout_alignParentRight="true"
+            />
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/about_rl"
+        android:layout_below="@id/version_rl"
+        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:background="@color/white"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="关于"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="8dp"
+            />
+    </RelativeLayout>
+    <Button
+        android:id="@+id/logout_bt"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        />
 </RelativeLayout>
