--- a/app/src/main/res/layout/ny_beauty_item.xml
+++ b/app/src/main/res/layout/ny_beauty_item.xml
@@ -5,17 +5,13 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    android:paddingBottom="4dp"
-    android:paddingLeft="4dp"
-    android:paddingRight="4dp"
-    android:paddingTop="4dp">
+    android:padding="2dp">
 
-    <com.basesmartframe.bitmap.rounddrawable.RoundedImageView
+    <ImageView
         android:id="@+id/big_pic_iv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
-        app:riv_corner_radius="6dp" />
+        android:scaleType="centerCrop"/>
 
     <TextView
         android:id="@+id/pic_label_tv"
