--- a/app/src/main/res/layout/ny_beauty_show_activity.xml
+++ b/app/src/main/res/layout/ny_beauty_show_activity.xml
@@ -1,64 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
 
-
-
-    <android.support.v4.view.ViewPager
+    <xnt.com.fun.view.ExViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
 
     <ImageView
         android:id="@+id/music_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/music_icon"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="10dp"
+        android:layout_alignParentTop="true"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/music_icon"
         android:visibility="invisible"
-        tools:visibility="visible"
-        />
+        tools:visibility="visible" />
 
     <xnt.com.fun.view.GestureView
         android:id="@+id/ny_beauty_gesture"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@id/music_iv"
         android:layout_marginTop="8dp"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:visibility="gone" />
 
     <View
         android:id="@+id/fixed_view"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/white"
         android:layout_centerVertical="true"
-        android:visibility="invisible"
-        />
+        android:background="@color/white"
+        android:visibility="invisible" />
+
     <com.hanks.htextview.typer.TyperTextView
         android:id="@+id/word_ttv"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:gravity="top|center_horizontal"
         android:layout_alignParentRight="true"
         android:layout_marginTop="-50dp"
         android:layout_marginRight="10dp"
-        android:textSize="32dp"
         android:background="@color/transparent_half"
+        android:gravity="top|center_horizontal"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:textSize="32dp"
+        android:visibility="gone"
         app:charIncrease="3"
-        app:typerSpeed="160"/>
+        app:typerSpeed="160" />
 
 
     <include
@@ -68,98 +63,24 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:visibility="gone"
-        tools:visibility="visible"
-        />
+        tools:visibility="visible" />
+
     <com.opensource.svgaplayer.SVGAImageView
         android:id="@+id/praise_animation_svga"
-        android:layout_height="150dp"
         android:layout_width="150dp"
-        android:scaleType="fitCenter"
+        android:layout_height="150dp"
         android:layout_centerInParent="true"
-        app:antiAlias="true"
-        />
+        android:scaleType="fitCenter"
+        app:antiAlias="true" />
 
-    <RelativeLayout
-        android:id="@+id/bottom_show_bar_rl"
+    <include
+        layout="@layout/comment_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/transparent_half"
-        >
-        <TextView
-            android:id="@+id/pic_desc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="16dp"
-            android:maxLines="3"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            />
-        <View
-            android:id="@+id/beauty_desc_divider"
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:background="@color/white"
-            android:layout_below="@id/pic_desc"
-            android:visibility="gone"
-            />
-        <include
-            android:id="@+id/first_comment_view"
-            layout="@layout/beauty_comment_item_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/beauty_desc_divider"
-            android:visibility="gone"
-            />
+        android:layout_alignParentBottom="true" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="8dp"
-            android:background="@color/white"
-            android:layout_below="@id/pic_desc"
-            >
-            <TextView
-                android:id="@+id/beauty_write_comment_tv"
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="40dp"
-                android:textSize="14sp"
-                android:text="写评论"
-                android:gravity="center"
-                />
-            <View
-                android:layout_width="1dp"
-                android:layout_height="40dp"
-                android:background="@color/lb_grey"
-                />
-            <TextView
-                android:id="@+id/beauty_show_comment_tv"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="40dp"
-                android:textSize="14sp"
-                android:text="展示评论"
-                android:gravity="center"
-                />
-            <View
-                android:layout_width="1dp"
-                android:layout_height="40dp"
-                android:background="@color/lb_grey"
-                />
-            <TextView
-                android:id="@+id/beauty_praise_tv"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="40dp"
-                android:textSize="14sp"
-                android:text="点赞"
-                android:gravity="center"
-                />
-
-        </LinearLayout>
-    </RelativeLayout>
+    <FrameLayout
+        android:id="@+id/dialog_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
