--- a/app/src/main/res/layout/comment_bottom.xml
+++ b/app/src/main/res/layout/comment_bottom.xml
@@ -37,7 +37,9 @@
         <View
             android:layout_width="1dp"
             android:layout_height="40dp"
-            android:background="@color/lb_grey" />
+            android:background="@color/lb_grey"
+            android:visibility="gone"
+            />
 
         <ImageView
             android:layout_width="24dp"
@@ -60,6 +62,7 @@
         <View
             android:layout_width="1dp"
             android:layout_height="40dp"
+            android:visibility="gone"
             android:background="@color/lb_grey" />
 
         <TextView
