--- a/app/src/main/res/layout/comment_dialog.xml
+++ b/app/src/main/res/layout/comment_dialog.xml
@@ -43,13 +43,12 @@
             android:layout_marginRight="20dp"
             android:background="#ebebeb"/>
 
-        <com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView
-            android:id="@+id/load_more_rv"
-            android:layout_below="@id/divider_title"
-            android:layout_marginTop="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+       <include layout="@layout/base_refresh_layout"
+           android:layout_below="@id/divider_title"
+           android:layout_marginTop="8dp"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           />
 
         <FrameLayout
             android:id="@+id/http_container"
